<?xml version="1.0" encoding="utf-8"?>
<resources>
    <drawable name="clr_normal">#666666</drawable>
    <drawable name="clr_pressed">#333333</drawable>
    <drawable name="list_normal">#00000000</drawable>
    <drawable name="list_pressed">#FF333333</drawable>
    <string name="app_name">中惠旅资产管理</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="version">Version:</string>
    <string name="dmin">Min_Frequency:</string>
    <string name="band">Frequency band:</string>
    <string name="dmax">Max_Frequency:</string>
    <string name="power">Power:</string>
    <string name="scantime">Max Time Of Inventory:</string>
    <string name="opening">"Opening Device.."</string>


    <string name="no_found_network">无网络连接</string>
    <string name="loading">正在加载...</string>
    <string name="loadFail">加载不出数据</string>
    <string name="loadFail_net">网络不给力</string>
    <string name="loadFail_reload">点击屏幕重试</string>
    <string name="no_data">啥都没有</string>
    <string name="load_all_finish">全部加载完毕</string>
    
    <string-array name="men_select">
        <item>Reservations</item>
        <item>EPC</item>
        <item>TID</item>
        <item>User</item>
    </string-array>
    <string-array name="men_s">
        <item>Single</item>
        <item>Multi</item>
        <item>Auto</item>
    </string-array>
    <string-array name="men_time">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>
    <string name="open_warning">You must open the device before your oprate!</string>
    <string name="wordptr_empty_warning">WordPtr can not be empty!</string>
    <string name="length_empty_warning">Length can not be empty!</string>
    <string name="pwd_empty_warning">Password can not be empty!</string>
    <string name="content_empty_warning">Write data need content not be empty!</string>
    <string name="length_content_warning">Length and content does not match!</string>
    <string name="str_lenght_odd_warning">Length of every data can not be odd!</string>
    <string name="data_ilegal">Data illegal!(empty or length is odd?)</string>
    <string-array name="Fre_select">
        <item>902.75 MHz</item>
        <item>903.25 MHz</item>
        <item>903.75 MHz</item>
        <item>904.25 MHz</item>
        <item>904.75 MHz</item>
        <item>905.25 MHz</item>
        <item>905.75 MHz</item>
        <item>906.25 MHz</item>
        <item>906.75 MHz</item>
        <item>907.25 MHz</item>
        <item>907.75 MHz</item>
        <item>908.25 MHz</item>
        <item>908.75 MHz</item>
        <item>909.25 MHz</item>
        <item>909.75 MHz</item>
        <item>910.25 MHz</item>
        <item>910.75 MHz</item>
        <item>911.25 MHz</item>
        <item>911.75 MHz</item>
        <item>912.25 MHz</item>
        <item>912.75 MHz</item>
        <item>913.25 MHz</item>
        <item>913.75 MHz</item>
        <item>914.25 MHz</item>
        <item>914.75 MHz</item>
        <item>915.25 MHz</item>
        <item>915.75 MHz</item>
        <item>916.25 MHz</item>
        <item>916.75 MHz</item>
        <item>917.25 MHz</item>
        <item>917.75 MHz</item>
        <item>918.25 MHz</item>
        <item>918.75 MHz</item>
        <item>919.25 MHz</item>
        <item>919.75 MHz</item>
        <item>920.25 MHz</item>
        <item>920.75 MHz</item>
        <item>921.25 MHz</item>
        <item>921.75 MHz</item>
        <item>922.25 MHz</item>
        <item>922.75 MHz</item>
        <item>923.25 MHz</item>
        <item>923.75 MHz</item>
        <item>924.25 MHz</item>
        <item>924.75 MHz</item>
        <item>925.25 MHz</item>
        <item>925.75 MHz</item>
        <item>926.25 MHz</item>
        <item>926.75 MHz</item>
        <item>927.25 MHz</item>
    </string-array>
    <string-array name="Power_select">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
    </string-array>
    <string-array name="beep_select">
        <item>off</item>
        <item>on</item>
    </string-array>
    <string name="title_activity_connect232">Connect232</string>
    <string name="buad_rate">BaudRate：</string>
    <string name="serialport">port：</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hex_recv">HEX recv</string>
    <string name="hex_send">HEX send</string>
    <string name="send">send</string>
    <string name="clear">clear</string>
    <string name="select_power">select power</string>
    
    <string name="sure">Sure</string>
    <string name="count">Count</string>
    <string name="number">Number：</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="tid_query">Tid Query</string>
    
    <string name="storage">Storage area:</string>
    <string name="starting_address">Starting address(Word):</string>
    <string name="len">Length(Word):</string>
    <string name="access_password">Access password(Hex):</string>
    <string name="read_write_data">Read/Write Data(Hex):</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="write_epc">Write_EPC</string>
    
    <string name="set">Set</string>
    <string name="get">Get</string>
    <string name="buzzer">Buzzer</string>
    
    <string name="port_connect_success">Port Connect Success</string>
    <string name="port_connect_fail">Port Connect Fail</string>
    <string name="read_success">Read Success</string>
    <string name="read_fail">Read Fail</string>
    <string name="write_epc_success">Write EPC Success</string>
    <string name="write_epc_fail">Write EPC Fail</string>
    <string name="write_success">Write Success</string>
    <string name="write_fail">Write Fail</string>
    <string name="set_success">Set Success</string>
    <string name="set_fail">Set Fail</string>
</resources>
